<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:layout_margin="20sp"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <TextView
                style="@style/TextViewTitle"
                android:text="@string/verify"

                />
            <TextView
                style="@style/TextViewHeading"
                android:textAlignment="center"

                android:text="@string/verify_cmts"

                />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                app:errorEnabled="true"
                android:textColorHint="@color/white"
                app:errorTextAppearance="@color/white">

            <android.support.design.widget.TextInputEditText
                style="@style/TextEditText"
                android:hint="@string/enter_phone"
                android:textColor="@color/white"

                />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Botton"
                android:text="@string/send_otp"

                />
        </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>