<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120sp"
                    android:layout_height="120sp"
                    android:layout_gravity="center"
                    android:layout_margin="20sp"
                    tools:srcCompat="@tools:sample/avatars[0]" />

                <TextView
                    style="@style/TextViewTitle"
                    android:text="@string/verify_code"

                    />

                <TextView
                    style="@style/TextViewHeading"
                    android:text="@string/verify_cmts"

                    android:textAlignment="center"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50sp"
                    android:layout_marginEnd="50sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_margin="20sp"
                        android:background="@drawable/edit_otp_verify"
                        android:padding="2sp" />


                    <EditText
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_margin="20sp"
                        android:background="@drawable/edit_otp_verify"
                        android:padding="2sp" />

                    <EditText
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_margin="20sp"
                        android:background="@drawable/edit_otp_verify"
                        android:padding="2sp" />

                    <EditText
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_margin="20sp"
                        android:background="@drawable/edit_otp_verify"
                        android:padding="2sp" />


                </LinearLayout>

                <Button
                    style="@style/Botton"
                    android:text="@string/verify_btn"

                    />
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>